# TransmittanceEstimation

./: .gitignore  .gitmodules  readme.md
canonical/: CMakeLists.txt  array3D.h  base_includes.h  canonical_test.cpp  canonical_test.h  common.h  exceptions.h  floatimage.cpp  floatimage.h  hist.cpp  hist.h  main.cpp  util.cpp  util.h
canonical/estimators/: bidirectional.cpp  bidirectional.h  estimator.cpp  estimator.h  expected.cpp  expected.h  next_flight_ratio.cpp  next_flight_ratio.h  primaryestimator.cpp  primaryestimator.h  pseries_cdf.cpp  pseries_cdf.h  pseries_cumulative.cpp  pseries_cumulative.h  pseries_next_flight_ratio.cpp  pseries_next_flight_ratio.h  pseries_ratio.cpp  pseries_ratio.h  ratio_tracking.cpp  ratio_tracking.h  secondaryestimator.cpp  secondaryestimator.h  track_length.cpp  track_length.h  unidirectional.cpp  unidirectional.h
canonical/ext/mpfr_pp/: CMakeLists.txt  README.md  real.h  test.cpp
canonical/extinctions/: constFunc.cpp  constFunc.h  cosFunc.cpp  cosFunc.h  extinctionFunc.cpp  extinctionFunc.h  func.h  gaussFunc.cpp  gaussFunc.h  holeFunc.cpp  holeFunc.h  lin_dec.cpp  lin_dec.h  lin_inc.cpp  lin_inc.h  nullRatioFunc.cpp  nullRatioFunc.h  scosFunc.cpp  scosFunc.h  tightConstFunc.cpp  tightConstFunc.h
canonical/samplers/: halton.cpp  halton.h  halton_sampler.h  hammersley.cpp  hammersley.h  independent.cpp  independent.h  latinip.cpp  latinip.h  permute.cpp  permute.h  sampler.cpp  sampler.h
